html da pagina home feito

--- a/src/view/css/inde2.css
+++ b/src/view/css/inde2.css
@@ -1,16 +1,26 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu');
 
-html{
-    font: 2ch Ubuntu, sans-serif;
-    overflow-x: hidden;
+html, body{
+    font: 2ch 'Ubuntu', sans-serif;
+    background-color: #f5f5f5;
+    height: 100%;
+    min-height: 100%;
 }
 
+html
 header {
-    width: 80%;
+    width: 100%;
     height: 40px;
     display: inline-block;
+    background-color: white;
+    padding-bottom: 30px;
+    padding-top: 30px;
     text-align: center;
-    margin: 30px 10%;
+}
+
+header .ferramentas {
+    width: 1000px;
+    margin: auto;
 }
 
 header .localizacao {
@@ -58,27 +68,23 @@ header .localizacao .dropdown-localizacao:hover .dropdown-localizacoes {
     display: block;
 }
 
-header figure {
+header img {
     display: inline-block;
     vertical-align: middle;
 }
 
 header .entrar-cadastrar-conta {
     float: right;
-    width: 220px;
+    width: 240px;
 }
 
 header .entrar-cadastrar-conta .cadastrar {
-    width: 49%;
-    border: none;
+    width: 120px;
     color: white;
     float: right;
-    margin-left: 2%;
     background-color: #f87d16;
-    padding: 5% 10%;
-    font-size: 16px;
-    border-radius: 5px;
-    transition: background-color .3s;
+    font-size: 14px;
+    box-sizing: border-box;
 }
 
 header .entrar-cadastrar-conta .cadastrar:hover {
@@ -86,31 +92,43 @@ header .entrar-cadastrar-conta .cadastrar:hover {
 }
 
 header .entrar-cadastrar-conta .entrar {
-    width: 49%;
+    width: 120px;
     border: none;
     color: black;
     float: left;
-    background-color: white;
-    padding: 5% 10%;
     margin: 0;
-    font-size: 16px;
+    font-size: 14px;
+    box-sizing: border-box;
 }
 
+.card {
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
+    margin: 20px;
+    background-color: white;
+}
+
+.botao {
+    border-radius: 5px;
+    transition: background-color .3s;
+    text-decoration: none;
+    padding: 15px 30px;
+}
 
 .busca {
     background-image: url("../img/bg-busca.png");
     width: 100%;
-    position: absolute;
+    padding-top: 75px;
 }
 
 .busca .conteudo {
     position: relative;
+    width: 50%;
     top:50%;
     left:25%;
 }
 
-.busca .conteudo h1 {
-    margin-top: 75px;
+.busca .conteudo h2 {
     font-size: 33px;
     color: white;
 }
@@ -137,38 +155,233 @@ header .entrar-cadastrar-conta .entrar {
     font-size: 14px;
     border: none;
     color: white;
-    background: #166bf8 url("../img/icone-busca.png") no-repeat local 13%;
+    background: #166bf8 url("../img/icone-busca.png") no-repeat local 20px;
     padding: 1% 3% 1% 4.5%;
     border-radius: 5px;
 }
 
 .top-estabelecimentos {
-    position: absolute;
-    margin-top: 510px;
-    width: 100%;
+    width: 1000px;
+    margin: auto;
 }
+
+.top-estabelecimentos h2 {
+    font-size: 14px;
+    color: #2c86e5;
+    padding: 20px;
+    background-color: white;
+    float: left;
+    margin-right: 40%;
+    margin-bottom: 20px;
+}
+
 .top-estabelecimentos .coluna-esquerda{
     float: left;
-    position: relative;
-    background-color: darkmagenta;
 }
 
 .top-estabelecimentos .coluna-direita{
-    float: left;
-    position: relative;
-    background-color: #c26116;
+    float: right;
 }
 
 .top-estabelecimentos .item {
-    width: 495px;
+    width: 480px;
     height: 240px;
+    margin: 0 0 10px;
+}
+.top-estabelecimentos .item:nth-child(even) {
+    margin-right: 5px;
+
 }
 
-.top-estabelecimentos .item .img{
+
+.top-estabelecimentos .item .foto-estabelecimento{
     float: left;
-    margin-right: 220px;
+    margin-right: 18px;
+    border-radius: 5px 0 0 5px;
 }
 
+.top-estabelecimentos .item .informacoes .cidade-estabelecimento {
+    padding-top: 20px;
+    padding-bottom: 15px;
+    font-size: 14px;
+    color: #777777;
+}
+
+.top-estabelecimentos .item .informacoes .nome-estabelecimento {
+    font-size: 18px;
+    color: #2c86e5;
+}
+
+.top-estabelecimentos .item .informacoes .endereco-estabelecimento {
+    font-size: 12px;
+    color: #777777;
+    padding-top: 10px;
+}
+
+.top-estabelecimentos .item .carrossel-servico-item {
+    height: 70px;
+    width: 265px;
+}
+
+.top-estabelecimentos .item .avaliacao {
+    font-size: 12px;
+    color: #777777;
+}
+
+.top-estabelecimentos .item .avaliacao .detalhes{
+    float: right;
+    font-size: 14px;
+    color: white;
+    background-color: #59a3f6;
+    margin-bottom: 20px;
+    margin-right: 15px;
+}
+
+.top-estabelecimentos .item .avaliacao .detalhes:hover{
+    background-color: #2370f6;
+}
+
+.top-cidades {
+    width: 1000px;
+    margin: auto;
+}
+
+.top-cidades h2 {
+    font-size: 14px;
+    color: #2c86e5;
+    padding: 20px;
+    background-color: white;
+    float: left;
+    margin-right: 80%;
+    margin-bottom: 20px;
+}
+
+.top-cidades .cidade{
+    display: inline-block;
+    background-color: white;
+    width: 240px;
+    height: 240px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
+    margin-right: 6px;
+}
+
+.top-cidades .cidade img{
+    position: relative;
+    left: 10px;
+    top: 10px;
+}
+
+.top-cidades .cidade .estado-cidade{
+    font-size: 12px;
+    color: #777777;
+    padding-top: 10px;
+    position: relative;
+    left: 10px;
+    top: 10px;
+}
+
+.top-cidades .cidade .nome-cidade{
+    position: relative;
+    left: 10px;
+    top: 10px;
+    font-size: 18px;
+    color: #2c86e5;
+}
+
+footer {
+    width: 100%;
+    background-color: white;
+    padding-bottom: 50px;
+}
+
+footer main {
+    width: 1000px;
+    margin: 20px auto auto;
+
+}
+
+footer main div {
+    display: inline-table;
+    width: 245px;
+    font-size: 14px;
+    color: #777777;
+    box-sizing: border-box;
+}
+
+footer main .info {
+    text-align: justify;
+}
+
+footer main .fac {
+    align-items: center;
+    padding-left: 100px;
+}
+
+footer main .legal {
+    padding-left: 50px;
+}
+
+footer main .newsletter h2{
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+footer main .newsletter input[type="email"] {
+    width: 150px;
+    border: none;
+    padding: 1em;
+    font-size: 12px;
+    border-radius: 5px;
+    background-color: #e9e9e9;
+}
+
+footer main .newsletter input[type="submit"] {
+    border-radius: 5px;
+    font-size: 12px;
+    background-color: #166bf8;
+    border: none;
+    padding: 1em;
+}
+footer main .newsletter ul {
+}
+
+footer main .newsletter ul li{
+    display: inline-table;
+    float: right;
+    margin-top: 20px;
+    margin-right: 20px;
+}
+
+footer main .newsletter ul li a {
+    display: block;
+    width: 24px;
+    height: 24px;
+    font-size: 25px;
+}
+
+.icone-social {
+    background-image: url("../img/sprites-links-sociais.png");
+}
+
+footer main .newsletter ul li a[href*="facebook"]{
+    background-position: 0 0;
+}
+
+footer main .newsletter ul li a[href*="twitter"]{
+    background-position: 84px 0;
+}
+
+
+footer main .newsletter ul li a[href*="plus.google"]{
+    background-position: 54px 0;
+}
+
+
+footer main .newsletter ul li a[href*="instagram"]{
+    background-position: 24px 0;
+}
 
 
 
