--- a/src/view/css/index.css
+++ b/src/view/css/index.css
@@ -1,40 +1,40 @@
+@import url('https://fonts.googleapis.com/css?family=Ubuntu');
+
 html{
-    box-sizing: border-box;
+    font: 2ch Ubuntu, sans-serif;
+    overflow-x: hidden;
 }
+
 header {
-    width: 84%;
-    height: 20%;
+    width: 80%;
+    height: 40px;
     display: inline-block;
-    margin-top: 2%;
     text-align: center;
-    margin-left: 8%;
-    margin-right: 8%;
-    margin-bottom: 2%;
+    margin: 30px 10%;
 }
 
-
-.localizacao {
+header .localizacao {
     width: 200px;
     float: left;
 }
 
-.localizacao ul {
+header .localizacao ul {
     margin: 0;
     padding: 14px 16px;
     overflow: hidden;
 }
 
-.localizacao li {
+header .localizacao li {
     float: left;
 }
 
-.localizacao li a, .dropbtn {
+header .localizacao li a, .dropbtn {
     color: black;
     text-align: center;
     text-decoration: none;
 }
 
-.localizacao .dropdown-localizacoes {
+header .localizacao .dropdown-localizacoes {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
@@ -43,18 +43,18 @@ header {
     z-index: 1;
 }
 
-.localizacao .dropdown-localizacoes a {
+header .localizacao .dropdown-localizacoes a {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
 }
 
-.localizacao .dropdown-localizacoes a:hover {
+header .localizacao .dropdown-localizacoes a:hover {
     background-color: #f1f1f1;
 }
 
-.localizacao .dropdown-localizacao:hover .dropdown-localizacoes {
+header .localizacao .dropdown-localizacao:hover .dropdown-localizacoes {
     display: block;
 }
 
@@ -63,12 +63,12 @@ header figure {
     vertical-align: middle;
 }
 
-
-.entrar-cadastrar-conta {
+header .entrar-cadastrar-conta {
     float: right;
     width: 220px;
 }
-.entrar-cadastrar-conta .cadastrar {
+
+header .entrar-cadastrar-conta .cadastrar {
     width: 49%;
     border: none;
     color: white;
@@ -80,11 +80,12 @@ header figure {
     border-radius: 5px;
     transition: background-color .3s;
 }
-.entrar-cadastrar-conta .cadastrar:hover {
+
+header .entrar-cadastrar-conta .cadastrar:hover {
     background-color: #c26116;
 }
 
-.entrar-cadastrar-conta .entrar {
+header .entrar-cadastrar-conta .entrar {
     width: 49%;
     border: none;
     color: black;
@@ -95,42 +96,84 @@ header figure {
     font-size: 16px;
 }
 
+
 .busca {
-    background-image: url("../res/img/bg-busca.png");
+    background-image: url("../img/bg-busca.png");
+    width: 100%;
     position: absolute;
-    width: 80%;
-    height: 80%;
-    padding-left: 20%;
 }
 
-.busca h1 {
-    font-size: 3em;
+.busca .conteudo {
+    position: relative;
+    top:50%;
+    left:25%;
+}
+
+.busca .conteudo h1 {
+    margin-top: 75px;
+    font-size: 33px;
     color: white;
-    margin-top: 3%;
-    margin-bottom: 1%;
 }
 
-.busca p {
-    font-size: 1.5em;
+.busca .conteudo p {
+    font-size: 14px;
     color: white;
-    margin: 2% 0 2% 0;
+    margin: 2ch 0 2ch 0;
 }
 
-.busca .campo-busca-home input[type="search"] {
-    width: 60%;
+.busca .conteudo .campo-busca-home input[type="search"] {
+    width: 480px;
+    height: 50px;
     border: none;
-    font-size: 1.5em;
-    padding: 1%;
+    font-size: 14px;
+    padding: 2ch;
     border-radius: 5px;
+    margin-right: 20px;
 }
 
-.busca .campo-busca-home input[type="submit"] {
+.busca .conteudo .campo-busca-home input[type="submit"] {
+    width: 130px;
+    height: 50px;
+    font-size: 14px;
     border: none;
     color: white;
-    background: #166bf8 url("../res/icones/icone-busca.png") no-repeat local 13%;
+    background: #166bf8 url("../img/icone-busca.png") no-repeat local 13%;
     padding: 1% 3% 1% 4.5%;
-    font-size: 1.5em;
     border-radius: 5px;
 }
+
+.top-estabelecimentos {
+    position: absolute;
+    margin-top: 510px;
+    width: 100%;
+}
+.top-estabelecimentos .coluna-esquerda{
+    float: left;
+    position: relative;
+    background-color: darkmagenta;
+}
+
+.top-estabelecimentos .coluna-direita{
+    float: left;
+    position: relative;
+    background-color: #c26116;
+}
+
+.top-estabelecimentos .item {
+    width: 495px;
+    height: 240px;
+}
+
+.top-estabelecimentos .item .foto-estabelecimento{
+    float: left;
+    margin-right: 220px;
+}
+
+
+
+
+
+
+
 
 
