--- a/src/view/index.html
+++ b/src/view/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <link type="text/css" rel="stylesheet" href="css/reset.css">
-    <link type="text/css" rel="stylesheet" href="css/index.css">
+    <link type="text/css" rel="stylesheet" href="css/inde2.css">
     <title>BabySpot's</title>
 </head>
 <body>
     <header> <!-- inicio do cabeçalho de navegação-->
-        <div> <!-- inicio toolbar-->
+        <div class="ferramentas centralizado"> <!-- inicio toolbar-->
             <div class="localizacao"> <!-- inicio locacalizacão-->
                 <ul>
                     <li class="dropdown-localizacao">
@@ -20,30 +20,167 @@
                     </li>
                 </ul>
             </div><!-- final locacalizacão-->
-            <figure>
-                <img class="logo-heme" src="res/img/logo-home.png" alt="Logo do site, está escrito: BabySpot's">
-            </figure>
+                <img class="logo-heme" src="img/logo-home.png" alt="Logo do site, está escrito: BabySpot's">
             <div class="entrar-cadastrar-conta">
-                <input type="submit" class="entrar" value="entrar" id="entrar" name="entrar">
-                <input type="submit" class="cadastrar" value="cadastrar" id="cadastrar" name="cadastrar">
+                <a class="botao entrar" href="#">entrar</a>
+                <a class="botao cadastrar" href="#">cadastrar</a>
             </div>
         </div> <!--fim toolbar-->
     </header> <!-- fim do cabeçalho de navegação-->
     <article> <!-- inicio conteudo -->
-        <section class="busca"> <!-- inicio busca -->
-            <h1>Descubra</h1>
-            <p>O restaurante ideal para a sua família</p>
-            <div> <!-- inicio formulario de busca -->
-                <form class="campo-busca-home">
-                    <input type="search" name="busca" id="busca" placeholder="Buscar Estabelecimento">
-                    <input type="submit" name="buscar" id="buscar" value="Buscar">
-                </form>
-            </div> <!-- final formulario de busca -->
-            <p>ou selecione o serviço que deseja procurar</p>
-            <div class="carrossel"> <!-- inicio carrossel de serviços -->
-                <!--TODO-->
-            </div> <!-- final carrossel de serviços -->
+        <section class="busca centralizado"> <!-- inicio busca -->
+            <div class="conteudo"> <!-- inicio do conteudo -->
+                <h2>Descubra</h2>
+                <p>O restaurante ideal para a sua família</p>
+                <div> <!-- inicio formulario de busca -->
+                    <form class="campo-busca-home">
+                        <input type="search" name="busca botao" id="busca" placeholder="Buscar Estabelecimento">
+                        <input type="submit" name="buscar botao" id="buscar" value="Buscar">
+                    </form>
+                </div> <!-- final formulario de busca -->
+                <p>ou selecione o serviço que deseja procurar</p>
+                <div class="carrossel"> <!-- inicio carrossel de serviços -->
+                    <!--TODO-->
+                </div> <!-- final carrossel de serviços -->
+            </div> <!-- final do conteudo -->
         </section> <!-- final busca -->
+        <section class="top-estabelecimentos centralizado"> <!-- inicio top estabelecimentos -->
+            <h2>Top Estabelecimentos</h2>
+            <div class="coluna-esquerda">
+                <div class="item card">
+                    <img class="foto-estabelecimento" src="img/foto-estabelecimento-1.png" alt="foto de um estabelecimento qualquer">
+                    <div class="informacoes">
+                        <p class="cidade-estabelecimento">Campo Grande-MS</p>
+                        <p class="nome-estabelecimento">Chalé lanches</p>
+                        <p class="endereco-estabelecimento">Av. dos Cafezais, 1142 - Jardim Paulo Coelho Machado</p>
+                        <div class="carrossel-servico-item">
+                            <!-- TODO -->
+                        </div>
+                    </div>
+                    <div class="avaliacao">
+                        <span>70 avaliações</span>
+                        <img src="" alt="quantidade de estrelas"> <!--Colocar a imagem da estrela equivalente-->
+                        <a class="botao detalhes" href="#">detalhes</a>
+                    </div>
+                </div>
+                <div class="item card">
+                    <img class="foto-estabelecimento" src="img/foto-estabelecimento-1.png" alt="foto de um estabelecimento qualquer">
+                    <div class="informacoes">
+                        <p class="cidade-estabelecimento">Campo Grande-MS</p>
+                        <p class="nome-estabelecimento">Chalé lanches</p>
+                        <p class="endereco-estabelecimento">Av. dos Cafezais, 1142 - Jardim Paulo Coelho Machado</p>
+                        <div class="carrossel-servico-item">
+                            <!-- TODO -->
+                        </div>
+                    </div>
+                    <div class="avaliacao">
+                        <span>70 avaliações</span>
+                        <img src="" alt="quantidade de estrelas"> <!--Colocar a imagem da estrela equivalente-->
+                        <a class="botao detalhes" href="#">detalhes</a>
+                    </div>
+                </div>
+            </div>
+            <div class="coluna-direita">
+                <div class="item card">
+                    <img class="foto-estabelecimento" src="img/foto-estabelecimento-1.png" alt="foto de um estabelecimento qualquer">
+                    <div class="informacoes">
+                        <p class="cidade-estabelecimento">Campo Grande-MS</p>
+                        <p class="nome-estabelecimento">Chalé lanches</p>
+                        <p class="endereco-estabelecimento">Av. dos Cafezais, 1142 - Jardim Paulo Coelho Machado</p>
+                        <div class="carrossel-servico-item">
+                            <!-- TODO -->
+                        </div>
+                    </div>
+                    <div class="avaliacao">
+                        <span>70 avaliações</span>
+                        <img src="" alt="quantidade de estrelas"> <!--Colocar a imagem da estrela equivalente-->
+                        <a class="botao detalhes" href="#">detalhes</a>
+                    </div>
+                </div>
+                <div class="item card">
+                    <img class="foto-estabelecimento" src="img/foto-estabelecimento-1.png" alt="foto de um estabelecimento qualquer">
+                    <div class="informacoes">
+                        <p class="cidade-estabelecimento">Campo Grande-MS</p>
+                        <p class="nome-estabelecimento">Chalé lanches</p>
+                        <p class="endereco-estabelecimento">Av. dos Cafezais, 1142 - Jardim Paulo Coelho Machado</p>
+                        <div class="carrossel-servico-item">
+                            <!-- TODO -->
+                        </div>
+                    </div>
+                    <div class="avaliacao">
+                        <span>70 avaliações</span>
+                        <img src="" alt="quantidade de estrelas"> <!--Colocar a imagem da estrela equivalente-->
+                        <a class="botao detalhes" href="#">detalhes</a>
+                    </div>
+                </div>
+            </div>
+        </section> <!-- final top estabelecimentos -->
+        <section class="top-cidades centralizado"> <!--inicio top cidade -->
+            <h2>Top Cidades</h2>
+            <div class="cidade">
+                <img src="img/foto-cidade.png" alt="nome da cidade">
+                <p class="estado-cidade">Mato Grosso do Sul</p>
+                <p class="nome-cidade">Campo Grande</p>
+            </div>
+            <div class="cidade">
+                <img src="img/foto-cidade.png" alt="nome da cidade">
+                <p class="estado-cidade">Mato Grosso do Sul</p>
+                <p class="nome-cidade">Campo Grande</p>
+            </div>
+            <div class="cidade">
+                <img src="img/foto-cidade.png" alt="nome da cidade">
+                <p class="estado-cidade">Mato Grosso do Sul</p>
+                <p class="nome-cidade">Campo Grande</p>
+            </div>
+            <div class="cidade">
+                <img src="img/foto-cidade.png" alt="nome da cidade">
+                <p class="estado-cidade">Mato Grosso do Sul</p>
+                <p class="nome-cidade">Campo Grande</p>
+            </div>
+        </section> <!-- final top cidades -->
     </article> <!-- final conteudo -->
+
+    <footer>
+        <main>
+            <div class="info">
+                <img src="img/logo-home.png">
+                <p>
+                    Onde você quer ir hoje?<br>Encontre o estabelecimento que forneça uma infraestrutura adequada para a recepção de sua familia.
+                </p>
+            </div>
+            <div class="fac">
+                <ul>
+                    <li>
+                        <li>Anunciar</li>
+                        <li>Contato</li>
+                        <li>Ajuda</li>
+                        <li>Sobre</li>
+                    </li>
+                </ul>
+            </div>
+            <div class="legal">
+                <ul>
+                    <li>Condições de uso</li>
+                    <li>Informação legal</li>
+                    <li>Política de Privacidade</li>
+                    <li>Mapa do site</li>
+                    <li>Política de Cookies</li>
+                </ul>
+            </div>
+            <div class="newsletter">
+                <h2>newsletter</h2>
+                <form>
+                    <input type="email" name="email" placeholder="Informe o seu E-mail" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$">
+                    <input type="submit" name="pedidoDeNewletter" value="enviar">
+                </form>
+                <ul>
+                    <li><a class="icone-social" href="https://www.facebook.com/"></a></li>
+                    <li><a class="icone-social" href="https://twitter.com"></a></li>
+                    <li><a class="icone-social" href="https://plus.google.com/u/0/"></a></li>
+                    <li><a class="icone-social" href="https://www.instagram.com/?hl=pt-br"></a></li>
+                </ul>
+            </div>
+        </main>
+    </footer>
 </body>
 </html>
