--- a/src/view/css/index.css
+++ b/src/view/css/index.css
@@ -98,7 +98,7 @@ header .entrar-cadastrar-conta .entrar {
 
 
 .busca {
-    background-image: url("../img/bg-busca.png");
+    background-image: url("../images/bg-busca.png");
     width: 100%;
     position: absolute;
 }
@@ -137,7 +137,7 @@ header .entrar-cadastrar-conta .entrar {
     font-size: 14px;
     border: none;
     color: white;
-    background: #166bf8 url("../img/icone-busca.png") no-repeat local 13%;
+    background: #166bf8 url("../images/icone-busca.png") no-repeat local 13%;
     padding: 1% 3% 1% 4.5%;
     border-radius: 5px;
 }
