--- a/src/view/css/base.css
+++ b/src/view/css/base.css
@@ -5,7 +5,6 @@
 html, body{
     font-family: 'Ubuntu', sans-serif;
     background-color: #f5f5f5;
-    font-variant: 'regular';
 }
 
 /*Modela a parrencia de um botão do site*/
@@ -213,13 +212,21 @@ input[type=checkbox]:checked:before {
 }
 
 .navegacao {
-    width: 1000px;
-    margin: auto;
+    width: 100%;
     font-size: 16px;
     font-weight: bold;
     padding-top: 25px;
     padding-bottom: 25px;
+    border-radius: 0;
+    background: white;
+    box-shadow: 0 2px #dedede;
 }
+
+.navegacao ul {
+    width: 1000px;
+    margin: auto;
+}
+
 
 .navegacao li {
     display: inline-block;
