--- a/src/view/css/home.css
+++ b/src/view/css/home.css
@@ -41,7 +41,7 @@ main.container .buscar .container h2 + p {
 	padding:20px;
 	border-radius:5px;
 	margin-right:20px;
-	font-family: 'Ubuntu', sans-serif;
+	font-family:'Ubuntu', sans-serif;
 }
 
 .buscar .container .campo-busca input[type="submit"] {
@@ -55,7 +55,7 @@ main.container .buscar .container h2 + p {
 	padding-left:55px;
 	padding-right:30px;
 	border-radius:5px;
-	font-family: 'Ubuntu', sans-serif;
+	font-family:'Ubuntu', sans-serif;
 	cursor:pointer;
 }
 
@@ -66,119 +66,59 @@ main.container .buscar .container p {
 }
 
 main.container .buscar .container .carrossel { width:630px;height:130px;margin:25px 0 85px 0;position:relative; }
-main.container .buscar .container .carrossel .btn { width:20px;height:130px;display: block; }
+main.container .buscar .container .carrossel .btn { width:20px;height:130px;display:block; }
 main.container .buscar .container .carrossel .anterior { float:left; }
-main.container .buscar .container .carrossel .anterior a { width:5px;height:8px;display:block;text-decoration:none;margin-top:60px;background: url("../images/seta-esquerda.png") no-repeat; }
+main.container .buscar .container .carrossel .anterior a { width:5px;height:8px;display:block;text-decoration:none;margin-top:60px;background:url("../images/seta-esquerda.png") no-repeat; }
 main.container .buscar .container .carrossel .proximo { float:right; }
-main.container .buscar .container .carrossel .proximo a { width:5px;height:8px;display:block;text-decoration:none;margin-top:60px;float:right;background: url("../images/seta-direita.png") no-repeat; }
+main.container .buscar .container .carrossel .proximo a { width:5px;height:8px;display:block;text-decoration:none;margin-top:60px;float:right;background:url("../images/seta-direita.png") no-repeat; }
 main.container .buscar .container .carrossel .item {margin-bottom:60px;width:590px;display:block;position:absolute;left:20px; }
 main.container .buscar .container .carrossel .item ul {list-style:none outside none;padding-left:0;margin:0; }
 main.container .buscar .container .carrossel .item .servicos-busca a { text-decoration:none; }
 main.container .buscar .container .carrossel .item .servicos-busca .ico { width:70px;height:70px;margin:0 auto;margin-bottom:10px;  }
-main.container .buscar .container .carrossel .item .servicos-busca .ico.bercario { background: url("../images/ico-bercario.png") no-repeat;background-position: center center;  }
-main.container .buscar .container .carrossel .item .servicos-busca .ico.trocador { background: url("../images/ico-trocador.png") no-repeat;background-position: center center;  }
-main.container .buscar .container .carrossel .item .servicos-busca .ico.playground { background: url("../images/ico-playground.png") no-repeat;background-position: center center;  }
-main.container .buscar .container .carrossel .item .servicos-busca .ico.estacionamento { background: url("../images/ico-estacionamento.png") no-repeat;background-position: center center;  }
-main.container .buscar .container .carrossel .item .servicos-busca .ico.papinha { background: url("../images/ico-papinha.png") no-repeat;background-position: center center;  }
-main.container .buscar .container .carrossel .item .servicos-busca h3 { width:110px;height:40px;font-size:14px;color:#FFF;text-decoration:none;vertical-align:middle;display: table-cell;text-align:center;line-height:16px; }
+main.container .buscar .container .carrossel .item .servicos-busca .ico.bercario { background:url("../images/ico-bercario.png") no-repeat;background-position:center center;  }
+main.container .buscar .container .carrossel .item .servicos-busca .ico.trocador { background:url("../images/ico-trocador.png") no-repeat;background-position:center center;  }
+main.container .buscar .container .carrossel .item .servicos-busca .ico.playground { background:url("../images/ico-playground.png") no-repeat;background-position:center center;  }
+main.container .buscar .container .carrossel .item .servicos-busca .ico.estacionamento { background:url("../images/ico-estacionamento.png") no-repeat;background-position:center center;  }
+main.container .buscar .container .carrossel .item .servicos-busca .ico.papinha { background:url("../images/ico-papinha.png") no-repeat;background-position:center center;  }
+main.container .buscar .container .carrossel .item .servicos-busca h3 { width:110px;height:40px;font-size:14px;color:#FFF;text-decoration:none;vertical-align:middle;display:table-cell;text-align:center;line-height:16px; }
 
-main.container .top-estabelecimentos .container {
-	flex-direction:row;
-	flex-wrap:wrap;
-}
+main.container .top-estabelecimentos .container { flex-direction:row;flex-wrap:wrap; }
 
-.item {
-	width:495px;
-	margin-bottom:20px;
-}
+.item { width:492px;height:238px;margin-bottom:20px; }
+.item .foto { float:left;border-radius:5px 0 0 5px;width:200px;height:238px; }
+.item .infos { float:right;width:275px;height:100%; }
+.item .infos p:nth-child(1) { padding-top:20px;padding-bottom:15px;font-size:14px;color:#777777; }
+.item .infos p:nth-child(2) { font-size:18px;color:#2c86e5; }
+.item .infos p:nth-child(3) { width:256px;height:30px;font-size:12px;color:#777777;padding-top:5px;line-height:14px; }
 
-.item .foto{
-	float:left;
-	border-radius:5px 0 0 5px;
-	width:200px;
-}
 
-.item .infos {
-	float:right;
-	width:275px;
-	height:100%;
-}
+.item .carrossel-servico { width:256px;height:70px;margin:5px 0 10px 0;position:relative; }
+.item .carrossel-servico .btn { width:20px;height:70px;display:block; }
+.item .carrossel-servico .anterior { float:left; }
+.item .carrossel-servico .anterior a { width:5px;height:8px;display:block;text-decoration:none;margin-top:35px;background:url("../images/seta-esquerda-min.png") no-repeat; }
+.item .carrossel-servico .proximo { float:right; }
+.item .carrossel-servico .proximo a { width:5px;height:8px;display:block;text-decoration:none;margin-top:35px;float:right;background:url("../images/seta-direita-min.png") no-repeat; }
+.item .carrossel-servico .item-carrocel { margin-bottom:10px;width:216px;display:block;position:absolute;left:20px; }
+.item .carrossel-servico .item-carrocel ul { list-style:none outside none;padding-left:0;margin:0; }
+.item .carrossel-servico .item-carrocel .servicos-itens a { text-decoration:none; }
+.item .carrossel-servico .item-carrocel .servicos-itens .ico { width:40px;height:40px;margin:0 auto;margin-bottom:5px;  }
+.item .carrossel-servico .item-carrocel .servicos-itens .ico.bercario { background:url("../images/ico-bercario-min.png") no-repeat;background-position:center center;  }
+.item .carrossel-servico .item-carrocel .servicos-itens .ico.trocador { background:url("../images/ico-trocador-min.png") no-repeat;background-position:center center;  }
+.item .carrossel-servico .item-carrocel .servicos-itens .ico.playground { background:url("../images/ico-playground-min.png") no-repeat;background-position:center center;  }
+.item .carrossel-servico .item-carrocel .servicos-itens .ico.estacionamento { background:url("../images/ico-estacionamento-min.png") no-repeat;background-position:center center;  }
+.item .carrossel-servico .item-carrocel .servicos-itens .ico.papinha { background:url("../images/ico-papinha-min.png") no-repeat;background-position:center center;  }
+.item .carrossel-servico .item-carrocel .servicos-itens h3 { width:50px;height:20px;font-size:10px;color:#4095f5;text-decoration:none;vertical-align:middle;display:table-cell;text-align:center;line-height:12px; }
 
-.item .infos p:nth-child(1) {
-	padding-top:25px;
-	padding-bottom:21px;
-	font-size:14px;
-	color:#777777;
-}
 
-.item .infos p:nth-child(2) {
-	font-size:18px;
-	color:#2c86e5;
-}
 
-.item .infos p:nth-child(3) {
-	font-size:12px;
-	color:#777777;
-	padding-top:12px;
-}
+.item .avaliacao { height:45px;width:145px;float:left; }
+.item .avaliacao span { font-size:12px;color:#777777;width:66px; }
+.avali { background:url("../images/star-sprite.png") no-repeat 0 0;width:66px;height:10px;margin-top:8px; }
+.avali.qt-strelas-1 { background-position:0 -80px; }
+.avali.qt-strelas-2 { background-position:0 -60px; }
+.avali.qt-strelas-3 { background-position:0 -40px; }
+.avali.qt-strelas-4 { background-position:0 -20px; }
+.avali.qt-strelas-5 { background-position:0 0; }
 
-.item .carrossel-servico{
-	height:60px;
-	margin-bottom:5px;
-	padding-top:14px;
-	border-bottom:#777777 1px
-}
-
-.item .avaliacao {
-	height:45px;
-	width:145px;
-	float:left;
-}
-
-.item .avaliacao span{
-	font-size:12px;
-	color:#777777;
-	width:66px;
-}
-
-/*inicio - sprite com as estrelas */
-	.avali {
-		background:url("../images/star-sprite.png") no-repeat 0 0;
-		width:66px;
-		height:10px;
-		margin-top:8px;
-	}
-
-	.avali.qt-strelas-5 {
-		background-position:0 0;
-	}
-
-	.avali.qt-strelas-4 {
-		background-position:0 -20px;
-	}
-
-	.avali.qt-strelas-3 {
-		background-position:0 -40px;
-	}
-
-	.avali.qt-strelas-2 {
-		background-position:0 -60px;
-	}
-
-	.avali.qt-strelas-1 {
-		background-position:0 -80px;
-	}
-/*final - sprite com as estrelas */
-
-.item .detalhes{
-	float:right;
-	font-size:14px;
-	color:white;
-	background-color:#59a3f6;
-	margin-bottom:8px;
-	margin-right:8px;
-}
-
-.item .detalhes:hover{
-	background-color:#2370f6;
-}
+.item .detalhes{ width:110px;height:25px;float:right;font-size:14px;color:white;background-color:#59a3f6;margin-bottom:18px;margin-right:18px;padding:10px 0px 0px 0px; }
+.item .detalhes:hover{ background-color:#2370f6; }
