--- a/src/view/css/pagina-estabelecimento.css
+++ b/src/view/css/pagina-estabelecimento.css
@@ -240,6 +240,7 @@ text-decoration: underline;
     height: 100%;
     background-color: rgba(0, 0, 0, .8);
     overflow: auto;
+    z-index: 100000;
 }
 
 .popoup-critica > .card {
