--- a/src/view/css/css.css
+++ b/src/view/css/css.css
@@ -87,7 +87,7 @@ header.cabecalho-principal .container .conta .cadastrar {
 }
 
 header.cabecalho-principal .container .conta .cadastrar:hover {
-    background-color: #c26116;
+    background-color: #f07006;
 }
 
 footer .container {
@@ -320,6 +320,16 @@ input[type=checkbox]:checked:before {
     height: 0;
 }
 
-.login-suspenso { width:213px;height:148px;background-color:#FFF;position:absolute;right:68px;top:63px;z-index:999;border:1px solid #e9e9e9;-webkit-border-radius: 5px;-moz-border-radius: 5px;border-radius: 5px;display:none; }
+.login-suspenso { width:193px;height:133px;background-color:#FFF;position:absolute;right:68px;top:63px;z-index:999;border:1px solid #e9e9e9;-webkit-border-radius: 5px;-moz-border-radius: 5px;border-radius: 5px;padding:12px 10px 8px 10px;display:none; }
+.login-suspenso.recuperar { height:90px !important; }
 .login-suspenso .login-suspenso-seta { width:14px;height:8px;display:block;background:url(../images/seta-cima.png) no-repeat;position:absolute;right:105px;top:-8px; }
 .login-suspenso.aberto { display:block !important; }
+.login-suspenso .formulario-entrar { display:block !important; }
+.login-suspenso .formulario-recuperar { display:none !important; }
+.login-suspenso input { width:175px;height:20px;padding:0px;color:#868686;font-size:14px;padding:5px 8px;-webkit-border-radius: 5px;-moz-border-radius: 5px;border-radius: 5px;border: 1px solid #dcdcdc;margin-bottom:12px; }
+.login-suspenso .divisao { width:193px;height:1px;background-color:#dcdcdc;display:block !important;margin:3px 0; }
+.login-suspenso .acoes { width:193px;height:30px;display:block !important;margin-top:10px; }
+.login-suspenso .acoes a { font-size:12px;color:#868686;text-decoration:none;float:left;margin-top:8px;transition:color.1s; }
+.login-suspenso .acoes a:hover { color:#2370f6; }
+.login-suspenso .acoes .btn { width:80px;height:23px;float:right;background-color:#59a3f6;text-align:center;color:#FFF;font-size:14px;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;cursor:pointer;padding-top:7px;transition:background-color.3s; }
+.login-suspenso .acoes .btn:hover { background-color:#2370f6; }
